--- a/scripts/config.json
+++ b/scripts/config.json
@@ -5,7 +5,7 @@
     },
     "remote": {
         "url": "https://interactive.guim.co.uk",
-        "path": "atoms/2017/08/cashier",
+        "path": "atoms/2017/09/pine-ridge",
         "bucket": "gdn-cdn"
     }
 }
